--- a/teacher/LAB 01 - SUBMISSION EXAMPLE.ipynb
+++ b/teacher/LAB 01 - SUBMISSION EXAMPLE.ipynb
@@ -11,13 +11,13 @@
      "text": [
       "Installing sourcedefender...\n",
       "Successfully installed\n",
-      "endpoint http://localhost:5000/rlxmooc\n"
+      "endpoint https://m5knaekxo6.execute-api.us-west-2.amazonaws.com/dev-v0001/rlxmooc\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<h3>See <a href='http://localhost:5000/rlxmooc/web/login' target='_blank'>my courses and progress</a></h2>"
+       "<h3>See <a href='https://m5knaekxo6.execute-api.us-west-2.amazonaws.com/dev-v0001/rlxmooc/web/login' target='_blank'>my courses and progress</a></h2>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -33,20 +33,24 @@
     "init.init(force_download=False)\n",
     "import sourcedefender\n",
     "init.endpoint=\"http://localhost:5000/rlxmooc\"\n",
+    "init.endpoint='https://m5knaekxo6.execute-api.us-west-2.amazonaws.com/dev-v0001/rlxmooc'\n",
     "init.get_weblink()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "username: test_student\n",
-      "password: ········\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'local.lib.rlxmoocapi'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-aa97124b062d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlocal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrlxmoocapi\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msubmit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m student = session.Session(init.endpoint).login( course_id=init.course_id, \n\u001b[1;32m      4\u001b[0m                                                 \u001b[0msession_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"UDEA\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                                 lab_id=\"lab_01\" )\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'local.lib.rlxmoocapi'"
      ]
     }
    ],
@@ -730,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
