api automatic actualization

--- a/teacher/00 - DEPLOY COURSE.ipynb
+++ b/teacher/00 - DEPLOY COURSE.ipynb
@@ -420,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.E setup student notebooks and repo"
+    "## 1.F setup student notebooks and repo"
    ]
   },
   {
