--- a/teacher/LAB 01 - SUBMISSION EXAMPLE.ipynb
+++ b/teacher/LAB 01 - SUBMISSION EXAMPLE.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Installing sourcedefender...\n",
-      "Successfully installed\n",
+      "Enabling encryption...\n",
+      "Encryption enabled\n",
       "endpoint https://m5knaekxo6.execute-api.us-west-2.amazonaws.com/dev-v0001/rlxmooc\n"
      ]
     },
@@ -43,14 +43,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'local.lib.rlxmoocapi'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-aa97124b062d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlocal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrlxmoocapi\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msubmit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m student = session.Session(init.endpoint).login( course_id=init.course_id, \n\u001b[1;32m      4\u001b[0m                                                 \u001b[0msession_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"UDEA\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                                 lab_id=\"lab_01\" )\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'local.lib.rlxmoocapi'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "username: test_student\n",
+      "password: ········\n"
      ]
     }
    ],
@@ -734,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
