api automatic actualization

--- a/teacher/00 - DEPLOY COURSE.ipynb
+++ b/teacher/00 - DEPLOY COURSE.ipynb
@@ -29,7 +29,6 @@
     "init.init(force_download=False)\n",
     "import sourcedefender\n",
     "from local.lib.rlxmoocapi import submit, session, utils\n",
-    "init.endpoint=\"http://localhost:5000/rlxmooc\"\n",
     "init.endpoint"
    ]
   },
@@ -233,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = teacher.get_course(\"20201.test\")"
+    "c = teacher.get_course(course_id)"
    ]
   },
   {
@@ -242,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cs  = teacher.get_course_session(\"20201.test\", \"UDEA\")"
+    "cs  = teacher.get_course_session(course_id, session_id)"
    ]
   },
   {
