--- a/teacher/LAB 01 - SUBMISSION EXAMPLE.ipynb
+++ b/teacher/LAB 01 - SUBMISSION EXAMPLE.ipynb
@@ -32,8 +32,6 @@
     "import init\n",
     "init.init(force_download=False)\n",
     "import sourcedefender\n",
-    "init.endpoint=\"http://localhost:5000/rlxmooc\"\n",
-    "init.endpoint='https://m5knaekxo6.execute-api.us-west-2.amazonaws.com/dev-v0001/rlxmooc'\n",
     "init.get_weblink()"
    ]
   },
@@ -121,8 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maximum = np.max(lst)\n",
-    "minimum = np.min(lst)"
+    "maximum = ...\n",
+    "minimum = ..."
    ]
   },
   {
